[gd_scene load_steps=4 format=3 uid="uid://d0vnw5xfmv6hh"]

[ext_resource type="Script" uid="uid://cn6gsbt1wsl5b" path="res://scenes/characters_preview.gd" id="1_k3f51"]
[ext_resource type="PackedScene" uid="uid://dgya10gpidfa1" path="res://scenes/users_and_moduls/moduls/character_selection.tscn" id="2_lesvq"]
[ext_resource type="Theme" uid="uid://c8l1hasoxldul" path="res://assets/themes/ui.tres" id="3_lesvq"]

[node name="characters_preview" type="Node2D"]
script = ExtResource("1_k3f51")

[node name="ui" type="CanvasLayer" parent="."]

[node name="CharacterSelection" parent="ui" instance=ExtResource("2_lesvq")]

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
custom_minimum_size = Vector2(67, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 138.0
grow_horizontal = 0

[node name="close" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lesvq")
text = "×"

[node name="refresh" type="Button" parent="ui/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lesvq")
text = "⭯"

[node name="info_box" type="VBoxContainer" parent="ui"]
offset_left = 325.0
offset_top = 5.0
offset_right = 325.0
offset_bottom = 5.0

[node name="right_bot" type="VBoxContainer" parent="ui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="add_new" type="Button" parent="ui/right_bot"]
layout_mode = 2
theme = ExtResource("3_lesvq")
text = "add_new"

[node name="FileDialog" type="FileDialog" parent="ui/right_bot/add_new"]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="pressed" from="ui/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ui/VBoxContainer/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="ui/right_bot/add_new" to="." method="_on_add_new_pressed"]
[connection signal="file_selected" from="ui/right_bot/add_new/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="mouse_entered" from="ui/right_bot/add_new/FileDialog" to="." method="_on_file_dialog_mouse_entered"]
[connection signal="mouse_exited" from="ui/right_bot/add_new/FileDialog" to="." method="_on_file_dialog_mouse_exited"]
